# BookOS-Player

src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/linux/: desktop.hbs
src-tauri/src/: main.rs
